--- a/docker/image-musician/Dockerfile
+++ b/docker/image-musician/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:6.0
+FROM node:8.0
 MAINTAINER Maurice Lehmann <maurice.lehmann@heig-vd.ch>
 
 #Copy sources code of the node server
@@ -6,6 +6,9 @@ COPY src /opt/app/
 
 WORKDIR /opt/app/
 RUN npm install
+
+#Expose the port
+EXPOSE 2205
 
 # Start the node server
 ENTRYPOINT ["node", "/opt/app/musicianServer.js"]
